--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <title>Book List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
